# receipt-printer

./: .gitignore  README.md  configure_devices.py  devices.toml  install.sh  print_mic_ids.py  pyproject.toml  receipt_printer.py  requirements.txt  run.sh  setup.sh  voice_model.py
archive/: requirements.txt  voice_model.py
archive/quiz/: parse_questions.py  quizfragen.json
quiz/: parse_questions.py
src/thermal_printer/: __init__.py
src/thermal_printer/hardware/: __init__.py  camera.py  printer.py
